# pysrf

./: .gitignore  .pre-commit-config.yaml  .vale.ini  404.html  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  admm_run.py  build.py  build_cython.py  cd_test.py  index.html  meson.build  mkdocs.yml  objects.inv  pyproject.toml  rank_selection.py  refactor_imports.py  rsa.py  search.html  search.json  setup.py  setup.sh  sitemap.xml
.github/workflows/: attribution.yml  ci.yml  docs.yml
api/bounds/: index.html
api/consensus/: index.html
api/cross_validation/: index.html
api/model/: index.html
api/rank_estimation/: index.html
api/utils/: index.html
benchmarks/: README.md  bench_bsum.py  bench_cross_validation.py  bench_cython.py  bench_fit.py  bench_pbound.py  benchmark.py  benchmark_bounds.py  correctness.py  run.sh
bsum_implementations/: index.html
data/misc/: labels_spose_66d_short.txt
development/: index.html
docs/: bsum_implementations.md  development.md  examples.md  explanation.md  index.md  installation.md  quickstart.md
docs/api/: bounds.md  consensus.md  cross_validation.md  model.md  rank_estimation.md  utils.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-04-06-coherence-rewrite.md
examples/: index.html
experiments/dnn_universality/: run.py
experiments/rsa_comparison/: README.md  run.py
experiments/similarity_analysis/: README.md  run.py  submit_all.sh  submit_debug.sh
experiments/similarity_analysis/logs/: debug_peterson-animals.sbatch  debug_peterson-animals_22297600.err  debug_peterson-animals_22297600.out  debug_peterson-animals_22297630.err  debug_peterson-animals_22297630.out  debug_peterson-animals_22297658.err  debug_peterson-animals_22297658.out  debug_peterson-animals_22297698.err  debug_peterson-animals_22297698.out  debug_peterson-animals_22297776.err  debug_peterson-animals_22297776.out  debug_peterson-animals_22297825.err  debug_peterson-animals_22297825.out  debug_peterson-animals_22297851.err  debug_peterson-animals_22297851.out  debug_peterson-animals_22297880.err  debug_peterson-animals_22297880.out  debug_peterson-animals_22297886.err  (+13 more)
experiments/simulated_denoising/: run.py
experiments/things_behavior/: run.py
explanation/: index.html
extraction/: _base.py
installation/: index.html
notebooks/: benchmarks.ipynb  clustering.ipynb  demo.ipynb  embeddings.ipynb  hypothesis_testing.ipynb  kachun_simulation.ipynb  rank_selection.ipynb  reproducibility.ipynb  simulation.ipynb  sparse_spose_reconstruction.ipynb  spose.ipynb  spose_reconstruction.ipynb  symmetric_mixed_demo.ipynb  things.ipynb
pysrf/: .gitignore  __init__.py  _bsum.py  _bsum.pyx  _bsum_blocked.pyx  _bsum_fast.pyx  _bsum_fast_blas.pyx  _common.py  _quartic.pxd  _steps.py  _vbsum.pyx  _vbsum_reference.py  bounds.py  bounds_optimized.py  coherence.py  consensus.py  cross_validation.py  model.py  pyproject.toml  stability.py  utils.py
pysrf/coherence/: __init__.py  _bootstrap.py  _calibration.py  _coherence.py  _estimate.py  _rank_selection.py  _sampling_fraction.py  _stability.py
pysrf/docs/: index.md  installation.md  quickstart.md
pysrf/pysrf/: cross_validation.py  model.py  stability.py
pysrf/tests/: test_model.py
quickstart/: index.html
scripts/: 002_rank_recovery_experiment.py  01_hyperparams.py  02_rank_detection_experiment.py  02_rank_detection_experiment_gridsearch.py  03_clustering.py  03_sparse_spose_recon.py  04_spose_comparison.py  05_dimension_reproducibility.py  06_embeddings.py  07_estimate_spose_dimensionality.py  example_usage.py  run_embedding_generation.py  run_experiments.py  run_graph_clustering.py  run_rsa_comparison.py  run_rsa_comparison_intermediate_save.py  run_simulated_cross_validation.py  run_simulated_denoising.py  run_things_behavior.py
scripts/slurm/: debug.template.sh  monitor.sh  production.template.sh
search/: search_index.json
src/: config.py  cross_validation.py  cv.py  embedding_pipeline.py  helpers.py  plotting.py  simulation.py  sparse_spose_recon.py
src/analysis/: rsa_testing.py
src/benchmarks/: clustering.py  hypothesis.py  hypothesis_fixed.py  latent_recovery.py
src/datasets/: __init__.py  base.py  bold5000.py  cfg.py  cichy118.py  dnn.py  haxbyfaces.py  loaders.py  nsd.py  nsd_utils.py  peterson.py  registry.py  tabular.py  text.py  things_monkey.py
src/experiments/: README.md  __init__.py  cluster_embeddings.py  clustering.py  cross_validation.py  denoising.py  denoising_simulation.py  dimension_reliability.py  estimate_spose_dimensionality.py  hypothesis.py  rsa.py  sparse_spose_recon.py  spose.py  things.py
src/models/: __init__.py  _nnls_block.py  admm.py  admm_kachun.py  anls.py  bsum.pyx  bsum_cython.pyx  cd_updates.py  metrics.py  projection.py  symmetric.py  trifactor.py  utils.py
src/tools/: cka.py  cross_validation.py  metrics.py  pyproject.toml  stats.py
src/tools/utils/: dicts.py
src/utils/: __init__.py  helpers.py  io.py  plotting.py  simulation.py
srf/: helpers.py  io.py  plotting.py  rank_selection_cv.py  simulation.py  sparse_spose_recon.py  utils.py
srf/benchmarks/: clustering.py  denoising.py  hypothesis.py  latent_recovery.py  nmf_test_suite.py  registry.py
srf/datasets/: __init__.py  base.py  cfg.py  cichy118.py  haxbyfaces.py  helpers.py  mur92.py  nsd.py  tabular.py  test_nsd.py  things_monkey.py
srf/mixed/: admm.py  bsum.py  vsum.py
srf/models/: __init__.py  anls.py  base.py  mixed.py  normal_eqs.py  projection.py  symmetric.py  trifactor.py  trifactor_cd.py  trifactor_svd.py
tests/: bench_bsum.py  bsum_test.pyx  coherence_full.py  coherence_reference.npz  comapre_admm_kachun.py.py  compare_histories.py  conftest.py  cv_test.py  helpers.py  masking_stategy_test.py  test_bounds.py  test_bounds_optimized.py  test_bsum.py  test_coherence.py  test_convergence.py  test_cross_validation.py  test_cython.py  test_cython_correctness.py  test_model.py  test_vbsum.py  update_w.pyx
tests/checks/: check_coherence.py  check_coherence_peterson.py  check_cross_validation.py
tools/: pyproject.toml
tools/sampling/: triplets.py
(+86 files in other folders)
