[tool.poetry]
name = "similarity-factorization"
version = "0.0.1"
description = "Similarity-based Representation Factorization (SRF) tools for modeling representations in minds, brains, and machines."
authors = ["florianmahner <florian.mahner@icloud.com>"]
readme = "README.md"
packages = [
    {include = "*", from = "src"}
]

[tool.poetry.dependencies]
python = ">3.12"
pysrf = {path = "pysrf", develop = true, python = ">3.12"}
numpy = "^2.2.4"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
scikit-image = "^0.25.2"
numba = "^0.61.2"
nilearn = "^0.11.1"
h5py = "^3.13.0"
scipy = "^1.15.2"
statsmodels = "^0.14.4"
nimfa = "^1.4.0"
joblib = "^1.5.1"
fastcluster = "^1.3.0"
mantel = "^2.2.2"
umap = "^0.1.1"
torch = "^2.7.1"
torchvision = "^0.22.1"
cython = "^3.1.1"
pytest = "^8.4.1"
kneed = "^0.8.5"
pyclustering = "^0.10.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.3.2"
jupyterlab = "^4.0.0"
black = "^25.1.0"
autopep8 = "^2.3.2"

[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"