[project]
name = "pysrf"
version = "0.1.0"
description = "Similarity-based Representation Factorization (SRF) for modeling representations"
authors = [{name = "Florian Mahner", email = "florian.mahner@icloud.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["matrix-factorization", "representation-learning", "similarity", "nmf"]
dependencies = [
    "numpy>=1.23,<3.0",
    "scikit-learn>=1.3,<2.0",
    "scipy>=1.13,<2.0",
    "pandas>=2.0",
    "joblib>=1.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "cython>=3.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-autorefs>=0.5",
    "mkdocstrings-python>=1.7",
    "griffe>=0.44",
    "ipykernel>=6.30.1",
    "vale>=3.0",
]

[build-system]
requires = ["setuptools>=61", "wheel", "cython>=3.0", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pysrf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
