[project]
name = "pysrf"
version = "0.1.0"
description = "Similarity-based Representation Factorization (SRF) for modeling representations"
authors = [{name = "Florian Mahner", email = "florian.mahner@icloud.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["matrix-factorization", "representation-learning", "similarity", "nmf"]
dependencies = [
    "numpy>=2.0,<3.0",
    "scikit-learn>=1.3,<2.0",
    "scipy>=1.13,<2.0",
    "pandas>=2.0",
    "joblib>=1.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.9,<0.10",
    "cython>=3.0",
    "zensical",
    "mkdocstrings[python]>=1.0",
    "mkdocstrings-python>=1.7",
    "griffe>=0.44,<2.0",
    "ipykernel>=6.30.1",
    "pre-commit>=3.0",
    "meson-python>=0.16",
    "meson>=1.2",
    "ninja>=1.11",
]

[build-system]
requires = ["meson-python>=0.16", "cython>=3.0", "numpy>=2.0", "scipy>=1.13"]
build-backend = "mesonpy"

[tool.ruff.lint]
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
