[tool.poetry]
name = "ml-toolkit"
version = "0.0.1"
description = "A collection of tools for machine learning and scientific computing"
authors = ["florianmahner <florian.mahner@icloud.com>"]
readme = "README.md"
packages = [
    {include = "rsa"},
    {include = "cka"}, 
    {include = "stats"},
    {include = "metrics"},
    {include = "cross_validation"},
    {include = "extraction"},
    {include = "data"},
    {include = "plotting"},
    {include = "sampling"},
    {include = "things"},
    {include = "utils"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.122"
tomlparse = "1.1.1"
fracridge = "^2.0"
scikit-learn = "1.3.0"
lightning-bolts = "^0.7.0"
open-clip-torch = "^2.24.0"
numpy = "<2.0.0"
scikit-image = "^0.24.0"
seaborn = "^0.13.2"
scipy = "^1.14.1"
transformers = "4.40.1"
setuptools = "^74.1.2"
torch = "^2.4.1"
torchvision = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

