[tool.poetry]
name = "tools"
version = "0.0.1"
description = "A collection of tools for machine learning and scientific computing"
authors = ["florianmahner <florian.mahner@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fracridge = "^2.0"
lightning-bolts = "^0.7.0"
open-clip-torch = "^2.24.0"
tomlparse = "^1.1.1"
transformers = "^4.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

